[package]
name = "rc-status"
version = "0.1.25"
authors = ["NGnius (Graham) <ngniusness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", features = ["handlebars_templates", "serve"]}
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.11.1", features = ["json", "blocking"]}
chrono = { version = "0.4.19", features = ["serde"]}
# pnet = "0.27.2"
regex = "1"
tokio = { version = "1.11" }
libfj = { version = "0.5.3", features = ["cardlife"]}
